[gd_scene load_steps=3 format=2]

[ext_resource path="res://Minigames/observer/assets/hud/music/Game Over.ogg" type="AudioStream" id=1]
[ext_resource path="res://Minigames/observer/assets/hud/HUD.gd" type="Script" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="ScoreContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScoreContainer"]
margin_right = 47.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="ScoreContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 35.0
margin_bottom = 27.0
text = "score"

[node name="Score" type="Label" parent="ScoreContainer/HBoxContainer"]
margin_left = 39.0
margin_top = 13.0
margin_right = 47.0
margin_bottom = 27.0
text = "0"

[node name="GameOverContainer" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -19.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="GameOverContainer"]
margin_right = 144.0
margin_bottom = 14.0
text = "game over"

[node name="button" type="HBoxContainer" parent="GameOverContainer"]
margin_top = 18.0
margin_right = 144.0
margin_bottom = 38.0
alignment = 1

[node name="restart" type="Button" parent="GameOverContainer/button"]
margin_left = 58.0
margin_right = 70.0
margin_bottom = 20.0
text = "reinicio"

[node name="menu" type="Button" parent="GameOverContainer/button"]
margin_left = 74.0
margin_right = 86.0
margin_bottom = 20.0
text = "menu"

[connection signal="pressed" from="GameOverContainer/button/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOverContainer/button/menu" to="." method="_on_menu_pressed"]
